--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -12,7 +12,7 @@
   <% @week_days.each do |day| %>
     <div class='item'>
       <div class='date'>
-        <% day[:month] %>/<% day[:date] %>
+        <% day[:month] %>/<% day[:date] %> <%= day[:wdays] %>
       </div>
       <ul class='content'>
       <% if day[:plans].length != 0 %>
@@ -24,24 +24,3 @@
     </div>
   <% end %>
 </div>
-<<<<<<< second_training
-<div>
-  <div class='calendar'>
-    <% @week_days.each do |day| %>
-      <div class='item'>
-        <div class='date'>
-          <%= day[:month] %>/<%= day[:date] %> <%= day[:wdays] %>
-        </div>
-        <ul class='content'>
-        <% if day[:plans].length != 0 %>
-          <% day[:plans].each do |plan| %>
-            <li class='plan-list'>・<%= plan %></li>
-          <% end %>
-        <% end %>
-        </ul>
-      </div>
-    <% end %>
-  </div>
-</div>
-=======
->>>>>>> master
